local/grammars.txt
Program	-> 	begin Statements end EOF
Statements	->	Statement; Statements
				| ϵ
Statement	-> Decl
               |Assigment
               | Loop
			| print Expr
Decl 	-> 	Type ID ; Decl
			| ϵ
Type		->	int

Assigment	->Id = Expr
Exp 		->Expr - Expr
			|->Expr * Expr
			|->Expr ^ Expr
			|->( Expr )
			|-> ID
		    |-> NUMBER

Loop			-> while Expr do begin Statements end

ID = [a..z]|[A..Z] ([a..z]|[A..Z]|[0..9])*
NUMBER = 0|[1..9][0..9]*



Độ ưu tiên (theo thứ tự giảm dần):
-	Expr trong ngoặc
-	^
-	*
-	–

Kết hợp:
-	 -, *: kết hợp trái
-	^ kết hợp phải
Độ ưu tiên (theo thứ tự giảm dần):
-	Expr trong ngoặc
-	^
-	*
-	–

Kết hợp:
-	 -, *: kết hợp trái
-	^ kết hợp phải




Program	-> 	begin Statements end EOF
Statements	->	Statement; Statements
				| ϵ
Statement	-> Decl
|Assigment
| Loop
			| print Expr
Decl 	-> 	Type ID ; Decl
			| ϵ
Type		->	int

Assigment	->Id = Expr

Exp 			->Expr - Expr
			|->Expr * Expr
			|->Expr ^ Expr
			|->( Expr )
			|-> ID
		    |-> NUMBER
Loop			-> while Expr do begin Statements end

Decl     -> Type ID
